--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,21 +9,24 @@
 <body>
 <br />
 
-<ul class="nav nav-tabs">
-  <li role="presentation" class="active"><a href="#">Home</a></li>
-  <li role="presentation"><a href="#">Profile</a></li>
-  <li role="presentation"><a href="#">Messages</a></li>
-</ul>
+<div class = 'home-page col-xs-offset-2 col-xs-8'>
+		<br />
+	<ul class="nav nav-tabs">
+	  <li role="presentation" class="active"><%= link_to 'Home', root_path %></li>
+	  <li role="presentation"><%= link_to 'Courses', courses_path %></li>
+	  <li role="presentation"><%= link_to 'Sign In', new_user_session_path %></li>
+	  <li role="presentation"><%= link_to 'Sign Up', new_user_registration_path %></li>
+	</ul>
 
-<% if notice.present? %>
-<p class="notice"><%= notice %></p>
-<% end %>
+	<% if notice.present? %>
+	<p class="notice"><%= notice %></p>
+	<% end %>
 
-<% if alert.present? %>
-<p class="alert"><%= alert %></p>
-<% end %>
+	<% if alert.present? %>
+	<p class="alert"><%= alert %></p>
+	<% end %>
 
-<%= yield %>
-
+	<%= yield %>
+</div>
 </body>
 </html>
