add links and make pretty

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -5,7 +5,11 @@ body {
 
 .home-page {
 	background: #fff;
-	position: absolute;
-	height: 90%;
+	position: relative;
+	min-height: 550px;
 	border-radius: 5px;
+}
+
+.nav {
+	background: url('45degreee_fabric.png');
 }
