--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,15 +9,16 @@
 <body>
 <br />
 
-<div class = 'home-page col-xs-offset-2 col-xs-8'>
+<div class = 'col-xs-offset-2 col-xs-8'>
 		<br />
 	<ul class="nav nav-tabs">
-	  <li role="presentation" class="active"><%= link_to 'Home', root_path %></li>
-	  <li role="presentation"><%= link_to 'Courses', courses_path %></li>
-	  <li role="presentation"><%= link_to 'Sign In', new_user_session_path %></li>
-	  <li role="presentation"><%= link_to 'Sign Up', new_user_registration_path %></li>
+	  <li role="presentation" class="<%= 'active' if params[:controller] == 'static_pages' %>"><%= link_to 'Home', root_path %></li>
+	  <li role="presentation" class="<%= 'active' if params[:controller] == 'courses' %>"><%= link_to 'Courses', courses_path %></li>
+	  <li role="presentation" class="<%= 'active' if params[:controller] == 'devise/sessions' %>"><%= link_to 'Sign In', new_user_session_path %></li>
+	  <li role="presentation" class="<%= 'active' if params[:controller] == 'devise/registrations' %>"><%= link_to 'Sign Up', new_user_registration_path %></li>
 	</ul>
-
+</div>
+<div class = 'home-page col-xs-offset-2 col-xs-8'>
 	<% if notice.present? %>
 	<p class="notice"><%= notice %></p>
 	<% end %>
