--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,4 +1,11 @@
+<h1> Courses </h1>
+
+<div class = 'col-xs-offset-1 col-xs-8'>
+
+<br />
 <% @courses.each do |course| %>
-	<%= link_to course.title, course_path(course) %><p>
+	<h4><%= link_to course.title, course_path(course) %><p></h4>
 	<%= course.description %></p>
 <% end %>
+
+</div>
