--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,7 @@
-<div class = 'col-offset-xs-1 col-xs-8'>
+<div class = 'col-xs-offset-1 col-xs-8'>
 
-<h1>Hello World!</h1>
-
+	<h1>Enrol!</h1>
+	<p>
+	An application to help you manage course enrollment
+	</p>
 </div>
