--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,18 +13,23 @@
 	<ul class="nav nav-tabs">
 	  <li role="presentation" class="<%= 'active' if params[:controller] == 'static_pages' %>"><%= link_to 'Home', root_path %></li>
 	  <li role="presentation" class="<%= 'active' if params[:controller] == 'courses' %>"><%= link_to 'Courses', courses_path %></li>
-	  <% if @cart %> 
 	  	<li role="presentation" class="<%= 'active' if params[:controller] == 'carts' %>">
 	  	<%= link_to 'Cart', cart_path(@cart) %></li>
-	  <% else %>
-	 	<li role="presentation" class="<%= 'active' if params[:controller] == 'carts' %>">
-	 <% end %>
+
 	 <% if user_signed_in? %>
-	  <li role="presentation" class="<%= 'active' if params[:controller] == 'devise/sessions' %>"><%= link_to 'My Dashboard', '#' %></li>
+	  	<li role="presentation" class="dropdown">
+	  		<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+      			My Dashboard <span class="caret"></span>
+    		</a>
+		  	<ul class="dropdown-menu">
+		  		<%= link_to 'Sign out', destroy_user_session_path, :method => :delete %>
+		  	</ul>
+		</li>
 	 <% else %>
-	  <li role="presentation" class="<%= 'active' if params[:controller] == 'devise/sessions' %>"><%= link_to 'Sign In', new_user_session_path %></li>
-	  <li role="presentation" class="<%= 'active' if params[:controller] == 'devise/registrations' %>"><%= link_to 'Sign Up', new_user_registration_path %></li>
-	  <% end %>
+	 	<li role="presentation" class="<%= 'active' if params[:controller] == 'devise/sessions' %>"><%= link_to 'Sign In', new_user_session_path %></li>
+	  	<li role="presentation" class="<%= 'active' if params[:controller] == 'devise/registrations' %>"><%= link_to 'Sign Up', new_user_registration_path %></li>
+
+	 <% end %>
 	</ul>
 </div>
 <div class = 'home-page col-xs-offset-1 col-xs-10'>
