--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,6 +1,6 @@
 <h2>Your Cart</h2>
 <ul>
 	<% @cart.line_items.each do |item| %>
-		<li>session: <%= item.session.date %>, <%= item.session.from.strftime("from %H:%M") %> <%= item.session.to.strftime("to %H:%M") %>, <%= item.session.address %>, <%= item.session.postal_code %></li>
+		<li>session: <%= item.session.date %>, <%= item.session.from.strftime("from %H:%M") %> <%= item.session.to.strftime("to %H:%M") %>, <%= item.session.address %>, <%= item.session.postal_code %> <%= button_to 'Delete', line_item_path(item), :method => :delete, :class => 'btn btn-xs btn-success'%></li>
 	<% end %>
 </ul>
