--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: 'League Spartan';
+    src: url('leaguespartan-bold.eot');
+    src: url('leaguespartan-bold.eot?#iefix') format('embedded-opentype'),
+         url('leaguespartan-bold.woff2') format('woff2'),
+         url('leaguespartan-bold.woff') format('woff'),
+         url('leaguespartan-bold.ttf') format('truetype'),
+         url('leaguespartan-bold.svg#league_spartanbold') format('svg');
+    font-weight: bold;
+    font-style: normal;
+}
+
 body {
 	background: url('45degreee_fabric.png');
 	font-family: 'Helvetica neue';
@@ -12,4 +24,27 @@ body {
 
 .nav {
 	background: url('45degreee_fabric.png');
+	font-family: 'League Spartan', 'Helvetica neue', Helvetica, sans-serif; 
+}
+
+h1, h2, h3, h4, h5 {
+	font-family: 'League Spartan', 'Helvetica neue', Helvetica, sans-serif; 
+}
+
+.shopping-cart, td, th {
+	border: 1px solid black;
+	padding: 10px;
+}
+
+.shopping-cart th {
+	background-color: #449d44;
+	color: white;
+}
+
+.shopping-cart tr {
+	min-height: 80px;
+}
+
+.btn-xs.round {
+	border-radius: 20px;
 }
