--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,7 +1,27 @@
 <div class = 'col-xs-offset-1 col-xs-8'>
 
-	<h1>Enrol!</h1>
+	<h1>Audition Club</h1>
 	<p>
-	An application to help you manage course enrollment
+	Audition Club is for singers who want to practice their audition repertoire in front of an informal audience. We also welcome any 'observers' who would like to just be in the audience and listen.
+	<p>
+	<b>Cost:</b><br>
+	£8 per session for singers.
+	<p> 
+	<b>Commitment & Attendance:</b><br>
+	Once we all agreed, we will need you to commit to attending and the cost. That means that you will have to pay upfront. Please see the FAQ section for any other questions about commitment and attendance.
+	<p> 
+	<b>Pianist:</b><br>
+	We will have Louisa for all but 2 sessions. I will look into getting a pianist, but if you know anyone, please let me know.
+	<p>
+	<b>At Each Session:</b><br>
+	All but 3 sessions will have at least 4 singers. That means we will have about 10 to 15 min each person (give or take with setup/takedown and being nice to each other to say hi) This might be best if we break that up so that we are not staring at 1 person for 15 min....(thinking about our song classes.....the horror!) So, if you prepare to sing 2 pieces, we can cycle through the 4 singers, and then repeat and rinse. That means you get to sing your songs a 2nd time that evening after your nerves have calmed down. But ultimately it is up to you on how you'd like to use your 15 min.
+	<p> 
+	<b>To make it interesting and achieve our objectives:</b><br>
+	Some of the reasons that auditions are horrible is because we have to learn to sing in front of strangers. So, I think we would welcome people to bring a friend to the session, so we keep the faces fresh and our nerves on tip-top form.
 	</p>
+</div>
+<div class = 'col-xs-2'>
+<br />
+<br />
+<h5><%= link_to "Frequently Asked Q's", faq_path %></h5>
 </div>
