--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -11,7 +11,8 @@
 }
 
 body {
-	background: url('45degreee_fabric.png');
+	background: url('argyle.png');
+	background-color: #5c913d;
 	font-family: 'Helvetica neue';
 }
 
@@ -19,12 +20,56 @@ body {
 	background: #fff;
 	position: relative;
 	min-height: 550px;
-	border-radius: 5px;
+	border-radius: 10px;
+	border-bottom: 5px solid black;
+	border-right: 5px solid black;
+	border-top: 5px solid black;
+	border-left: 5px solid black;
+	margin-top: -4px;
+	z-index: 0;
+}
+
+a {
+	color: #0099FF;
 }
 
 .nav {
-	background: url('45degreee_fabric.png');
 	font-family: 'League Spartan', 'Helvetica neue', Helvetica, sans-serif; 
+}
+
+.nav-tabs {
+	margin-bottom: 0;
+	border: 0px;
+	font-size: 15px;
+}
+
+.nav-tabs > li > a {
+	background-color: #C8C8C8;
+	color: #505050;
+}
+
+.nav > li > a:hover, .nav > li > a:focus {
+	margin-right: 1px;
+	-moz-border-radius: 0px;
+	-webkit-border-radius: 10px 10px 0px 0px;
+	border-radius: 10px 10px 0px 0px; 
+	border: 5px solid black;
+	z-index: 1;
+}
+
+.nav-tabs > li > a, .nav-tabs > li.active > a, .nav-tabs > li.hover > a, 
+.nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus  {
+	margin-right: 2px;
+	-moz-border-radius: 0px;
+	-webkit-border-radius: 10px 10px 0px 0px;
+	border-radius: 10px 10px 0px 0px; 
+	border: 5px solid black;
+	z-index: 1;
+}
+
+.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover {
+	z-index: 2;
+	border-bottom-color: white;
 }
 
 h1, h2, h3, h4, h5 {
@@ -46,5 +91,5 @@ h1, h2, h3, h4, h5 {
 }
 
 .btn-xs.round {
-	border-radius: 20px;
+	border-radius: 18px;
 }
