--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -31,6 +31,10 @@
 
 	<p>
 		<%= link_to "Continue Shopping", courses_path %> | 
-		<%= link_to "Check Out with Paypal", @cart.paypal_url(courses_url, payment_notification_url) %>
+		<% if user_signed_in? %>
+			<%= link_to "Check Out with Paypal", @cart.paypal_url(courses_url, payment_notification_url) %>
+		<% else %>
+			<%= link_to 'Sign In to Check Out', new_user_registration_path %></li>
+		<% end %>
 	</p>
 </div>
