--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,8 @@
 <div class = 'col-xs-offset-1 col-xs-8'>
 
 	<h1>Audition Club</h1>
+	<%= image_tag 'lego-opera.jpg', :class => 'img-responsive', :alt => 'Lego Opera Singer' %>
+	<br />
 	<p>
 	Audition Club is for singers who want to practice their audition repertoire in front of an informal audience. We also welcome any 'observers' who would like to just be in the audience and listen.
 	<p>
