--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,13 @@
-<h2>Forgot your password?</h2>
+<div class = 'col-xs-offset-1 col-xs-8'>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+<h2>Forgot your password?</h2>
+<br />
+<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
+  <%= f.input :email, :placeholder => 'Email' %>
+  <%= f.submit 'Send me reset password instructions', :class => 'btn btn-danger' %>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
