--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,11 +36,11 @@
 <div class = 'home-page col-xs-offset-1 col-xs-10'>
 	<br />
 	<% if notice.present? %>
-	<p class="notice"><%= notice %></p>
+	<p class="alert alert-info"><%= notice %></p>
 	<% end %>
 
 	<% if alert.present? %>
-	<p class="alert"><%= alert %></p>
+	<p class="alert alert-danger"><%= alert %></p>
 	<% end %>
 
 	<%= yield %>
