--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -33,7 +33,7 @@
 		<% if user_signed_in? %>
 			<%= form_tag APP_CONFIG[:paypal_url] do %>
 			<%= hidden_field_tag :cmd, "_s-xclick" %>
-			<%= hidden_field_tag :encrypted, @cart.paypal_encrypted(courses_url, payment_notifications_url(:secret => APP_CONFIG[:paypal_secret])) %>
+			<%= hidden_field_tag :encrypted, @cart.paypal_encrypted(courses_url, payment_notifications_url(:secret => APP_CONFIG[:paypal_secret], :user_id => current_user.id)) %>
 			<%= submit_tag "Checkout", :class => 'btn btn-success pull-right' %>
 			<% end %>
 		<% else %>
