--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -9,17 +9,21 @@
 	<b>Cost:</b><br>
 	£8 per session for singers.
 	<p> 
-	<b>Commitment & Attendance:</b><br>
-	Once we all agreed, we will need you to commit to attending and the cost. That means that you will have to pay upfront. Please see the FAQ section for any other questions about commitment and attendance.
+	<b>Booking & Attendance:</b><br>
+	You will need to commit to attending and the cost. That is why you are being asked to pay upfront for each session. 
+	<p>
+	You can book the sessions up to 7 days before each session. To book, click on the session tab and you can book the session all together or separately.
+	<p>
+	There are ways to manage if you cannot attend.Please see the FAQ section for more suggestions.
 	<p> 
 	<b>Pianist:</b><br>
-	We will have Louisa for all but 2 sessions. I will look into getting a pianist, but if you know anyone, please let me know.
+	There will be a professional pianist that will be able to sight-read your music. But if your music is really difficult, they would appreciate if you can let the pianist know ahead of time.
 	<p>
 	<b>At Each Session:</b><br>
-	All but 3 sessions will have at least 4 singers. That means we will have about 10 to 15 min each person (give or take with setup/takedown and being nice to each other to say hi) This might be best if we break that up so that we are not staring at 1 person for 15 min....(thinking about our song classes.....the horror!) So, if you prepare to sing 2 pieces, we can cycle through the 4 singers, and then repeat and rinse. That means you get to sing your songs a 2nd time that evening after your nerves have calmed down. But ultimately it is up to you on how you'd like to use your 15 min.
+	The sessions will have at least 4 singers. That means we will have about 10 to 15 min each person (give or take with setup/takedown). We break the sessions up and cycle through the 4 singers. That means you get to sing your songs a 2nd time after your nerves have calmed down. But ultimately it is up to you on how you'd like to use your 15 min.
 	<p> 
 	<b>To make it interesting and achieve our objectives:</b><br>
-	Some of the reasons that auditions are horrible is because we have to learn to sing in front of strangers. So, I think we would welcome people to bring a friend to the session, so we keep the faces fresh and our nerves on tip-top form.
+	Some of the reasons that auditions are horrible is because we have to sing in front of strangers, and that is a learned skill. So, I think we would welcome people to bring friends to the session, so we keep the faces fresh and our nerves on tip-top form.
 	</p>
 </div>
 <div class = 'col-xs-2'>
