--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -4,9 +4,7 @@
 <% @courses.each do |course| %>
 	<%= course.description %>
 	<% course.sessions.each do |session| %>
-	<p><%= button_to 'Attend', line_items_path(:session_id => session), :class => 'btn btn-xs btn-success pull-left round' %>&nbsp;&nbsp;&nbsp;<b><%= session.date.strftime("%a, %d %b, %Y") %></b>, <%= session.from.strftime("from %H:%M") %> <%= session.to.strftime("to %H:%M") %>, pianist: <%= session.instructor %> (<%= session.location %>)
-		</p>
-
+	<p><%= button_to 'Attend', line_items_path(:session_id => session), :class => 'btn btn-xs btn-success pull-left round' %>&nbsp;&nbsp;&nbsp;<b><%= session.from.strftime("%a, %d %b, %Y") %></b>, <%= session.from.strftime("from %H:%M") %> <%= session.to.strftime("to %H:%M") %>, pianist: <%= session.instructor %> (<%= session.location %>)
 	<% end %>
 <% end %>
 
