--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,11 +1,15 @@
 <div class = 'col-xs-offset-1 col-xs-10'>
 <h1>Sessions</h1>
 <br />
+<% if @courses.present? %>
 <% @courses.each do |course| %>
 	<%= course.description %>
 	<% course.sessions.each do |session| %>
-	<p><%= button_to 'Attend', line_items_path(:session_id => session), :class => 'btn btn-xs btn-success pull-left round' %>&nbsp;&nbsp;&nbsp;<b><%= session.from.strftime("%a, %d %b, %Y") %></b>, <%= session.from.strftime("from %H:%M") %> <%= session.to.strftime("to %H:%M") %>, pianist: <%= session.instructor %> (<%= session.location %>)
+	<p><%= button_to 'Attend', line_items_path(:session_id => session), :class => 'btn btn-xs btn-success pull-left round' %>&nbsp;&nbsp;&nbsp;<b><%= session.from.strftime("%a, %d %b, %Y") if session.from.present? %></b>, <%= session.from.strftime("from %H:%M") if session.from.present? %> <%= session.to.strftime("to %H:%M") if session.to.present? %>, pianist: <%= session.instructor %> (<%= session.location %>)
 	<% end %>
+<% end %>
+<% else %>
+There are no sessions at this time.
 <% end %>
 
 </div>
