--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,7 +1,7 @@
 <div class = 'col-xs-offset-1 col-xs-8'>
 
 	<h1>Audition Club</h1>
-	<%= image_tag 'lego-opera.jpg', :class => 'img-responsive', :alt => 'Lego Opera Singer' %>
+	<%= image_tag 'lego-opera2.jpg', :class => 'img-responsive', :alt => 'Lego Opera Singer' %>
 	<br />
 	<p>
 	Audition Club is for singers who want to practice their audition repertoire in front of an informal audience. We also welcome any 'observers' who would like to just be in the audience and listen.
@@ -19,10 +19,10 @@
 	<b>Pianist:</b><br>
 	There will be a professional pianist that will be able to sight-read your music. But if your music is really difficult, they would appreciate if you can let the pianist know ahead of time.
 	<p>
-	<b>At Each Session:</b><br>
+	<b>At each session:</b><br>
 	The sessions will have at least 4 singers. That means we will have about 10 to 15 min each person (give or take with setup/takedown). We break the sessions up and cycle through the 4 singers. That means you get to sing your songs a 2nd time after your nerves have calmed down. But ultimately it is up to you on how you'd like to use your 15 min.
 	<p> 
-	<b>To make it interesting and achieve our objectives:</b><br>
+	<b>To make it interesting & meet our objectives:</b><br>
 	Some of the reasons that auditions are horrible is because we have to sing in front of strangers, and that is a learned skill. So, I think we would welcome people to bring friends to the session, so we keep the faces fresh and our nerves on tip-top form.
 	</p>
 </div>
