added two new gems

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -5,7 +5,7 @@
 <% @courses.each do |course| %>
 	<%= course.description %>
 	<% course.sessions.each do |session| %>
-	<p><%= button_to 'Attend', line_items_path(:session_id => session), :class => 'btn btn-xs btn-success pull-left round' %>&nbsp;&nbsp;&nbsp;<b><%= session.from.strftime("%a, %d %b, %Y") if session.from.present? %></b>, <%= session.from.strftime("from %H:%M") if session.from.present? %> <%= session.to.strftime("to %H:%M") if session.to.present? %>, pianist: <%= session.instructor %> (<%= session.location %>)
+	<p><%= button_to 'Attend', line_items_path(:session_id => session), :class => 'btn btn-xs btn-success pull-left round' %>&nbsp;&nbsp;&nbsp;<b><%= date_display(session.from) %></b>, <%= from_time_display(session.from) %> <%= to_time_display(session.to) %>, pianist: <%= session.instructor %> (<%= session.location %>)
 	<% end %>
 <% end %>
 <% else %>
