--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -13,8 +13,8 @@
 		<% @items.each do |item| %>
 		<tr>
 			<td><b><%= item.session.course.title %></b></td>
-			<td><%= item.session.from.strftime("%a, %d %b, %Y") %></td>
-			<td><%= item.session.from.strftime("from %H:%M") %> <%= item.session.to.strftime("to %H:%M") %></td>
+			<td><%= date_display(item.session.from) %></td>
+			<td><%= from_time_display(item.session.from) %> <%= to_time_display(item.session.to) %></td>
 			<td><%= item.session.location %></td>
 			<td><%= number_to_currency item.session.cost,:unit=>'£ ' %></td>
 			<td><%= link_to 'remove', line_item_path(item), :method => :delete %></td>
