--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -76,7 +76,7 @@ h1, h2, h3, h4, h5 {
 	font-family: 'League Spartan', 'Helvetica neue', Helvetica, sans-serif; 
 }
 
-.shopping-cart, td, th {
+.shopping-cart {
 	border: 1px solid black;
 	padding: 10px;
 }
