--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -44,7 +44,7 @@
                 data-amount="<%= (@cart.total_price * 100).to_i %>"></script>
       		<% end %>
 		<% else %>
-			<%= link_to 'Sign In to Check Out', new_user_session_path %></li>
+			| <%= link_to 'Sign In to Check Out', new_user_session_path %></li>
 		<% end %>
 	</p>
 </div>
