--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -76,20 +76,6 @@ h1, h2, h3, h4, h5 {
 	font-family: 'League Spartan', 'Helvetica neue', Helvetica, sans-serif; 
 }
 
-.shopping-cart {
-	border: 1px solid black;
-	padding: 10px;
-}
-
-.shopping-cart th {
-	background-color: #449d44;
-	color: white;
-}
-
-.shopping-cart tr {
-	min-height: 80px;
-}
-
-.btn-xs.round {
-	border-radius: 18px;
+.selected-text {
+	color: grey;
 }
