--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -9,7 +9,7 @@
 		<br />
 
 			
-			<%= simple_form_for LineItem.new do |f| %>
+			<%= simple_form_for @line_item, :url => line_items_path, :method => :post do |f| %>
 
 			<table class = 'table'>
 
