--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,4 +1,4 @@
-<div class = 'col-xs-offset-1 col-xs-10'>
+<div class = 'col-xs-12 col-md-offset-2 col-md-8'>
 <h1>Sessions</h1>
 <br />
 <% if @courses.present? %>
