--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -1,4 +1,7 @@
-<div class = 'col-xs-offset-1 col-xs-8'>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<div class = 'col-xs-12 col-md-offset-2 col-md-8'>
 
 	<h1>FAQ</h1>
 	<p>
