--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,4 +1,7 @@
-<div class = 'col-xs-offset-1 col-xs-8'>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<div class = 'col-xs-10 col-md-offset-1 col-md-8'>
 
 	<h1>Audition Club</h1>
 	<%= image_tag 'lego-opera2.jpg', :class => 'img-responsive', :alt => 'Lego Opera Singer' %>
@@ -26,8 +29,8 @@
 	Some of the reasons that auditions are horrible is because we have to sing in front of strangers, and that is a learned skill. So, I think we would welcome people to bring friends to the session, so we keep the faces fresh and our nerves on tip-top form.
 	</p>
 </div>
-<div class = 'col-xs-2'>
+<div class = 'col-xs-2 col-md-2'>
 <br />
 <br />
-<h5><%= link_to "Frequently Asked Q's", faq_path %></h5>
+<h5><%= link_to "FAQ's", faq_path %></h5>
 </div>
