--- a/app/views/notification_mailer/session_signed_up.text.erb
+++ b/app/views/notification_mailer/session_signed_up.text.erb
@@ -5,7 +5,7 @@ Hi, There,
 	<%= session.from.to_s(:short) %>
 	<% end %>
 
-	See your course sessions <%= courses_path %>
+	See course sessions here: <%= courses_url %>
 
 Keep on singing,
 WeiHsi
