--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,4 +1,4 @@
-<div class = 'col-xs-offset-1 col-xs-10'>
+<div class = 'col-xs-12 col-md-offset-1 col-md-10'>
 <h1>Your Shopping Cart</h1>
 <br />
 	<table class = 'table table_striped'>
