--- a/app/views/static_pages/thank_you_invoice.erb
+++ b/app/views/static_pages/thank_you_invoice.erb
@@ -3,7 +3,7 @@
 	<br />
 	<h4>Your Order Number: <%= @cart.id %></h4>
 	<br/>
-	Payment confirmed.
+	Invoice Sent
 	<br />
 	<h5>Enrolled Sessions:</h5>
 	<ul>
