--- a/app/views/notification_mailer/request_invoice.erb
+++ b/app/views/notification_mailer/request_invoice.erb
@@ -1,6 +1,6 @@
 <p>Hey There!</p>
 <p>
-	You have requested an electronic invoice to sign up for the following <b><%= @course_titles.to_s %></b>sessions:
+	You have requested an electronic invoice to sign up for the following <b><%= @course_titles.to_s %></b> sessions:
 </p>
 	<br />
 	<p>
@@ -16,10 +16,10 @@
 	</p>
 	<p>
 	<b>BACs Payment Details:</b><br />
-	Account Name: Logical Thinking Consultancy Ltd.
-	Bank: The co-operative Bank
-	Account Number: 69672576
-	Account Sort-Code: 08-92-99
+	Account Name: Logical Thinking Consultancy Ltd.<br />
+	Bank: The co-operative Bank<br />
+	Account Number: 69672576<br />
+	Account Sort-Code: 08-92-99<br />
 	</p>
 	<br />
 	<p>
