--- a/app/views/notification_mailer/session_signed_up.erb
+++ b/app/views/notification_mailer/session_signed_up.erb
@@ -3,7 +3,7 @@
 	Congrats! <b>You have signed up to these Audition Club sessions:</b>
 	<ul>
 	<% @sessions.each do |session| %>
-	<li> <%= session.from.to_s(:from_date) %></li>
+	<li> <%= session.start.to_s(:start_date) %></li>
 	<% end %>
 	</ul>
 </p>
